# short.ly

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 2025_01_01_0000-0001_initial_schema.py
src/shortly/: __init__.py  base62.py  config.py  database.py  deps.py  main.py  ratelimit.py  security.py
src/shortly/models/: __init__.py  click.py  link.py  user.py
src/shortly/routers/: __init__.py  auth.py  links.py  redirect.py
src/shortly/schemas/: __init__.py  link.py  token.py  user.py
src/shortly/services/: __init__.py  analytics.py  shortener.py
tests/: conftest.py  test_auth.py  test_base62.py  test_ratelimit.py  test_shorten.py
web/: .env.example  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/dashboard/: page.tsx
web/src/app/links/[code]/: page.tsx
web/src/app/login/: page.tsx
web/src/app/register/: page.tsx
web/src/app/unlock/[code]/: page.tsx
web/src/components/: AuthShell.tsx  CopyButton.tsx  CursorSpotlight.tsx  DashboardSidebar.tsx  Logo.tsx  MeshBackground.tsx  Navbar.tsx  Particles.tsx  ShortenForm.tsx  Sparkline.tsx  ThemeToggle.tsx  TypewriterHeadline.tsx
web/src/components/ui/: button.tsx  card.tsx  input.tsx  label.tsx
web/src/lib/: api.ts  auth.tsx  config.ts
